# -download-master

./: package-lock.json  package.json
.github/workflows/: build.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  downloader.rs  lib.rs  main.rs  task.rs
src/components/: AddTaskModal.vue  DownloadItem.vue  DownloadList.vue  SettingsModal.vue
src/stores/: downloads.ts
